Use defaults when variable is undefined

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -171,47 +171,47 @@
       vars:
         api_payload: "{{ item | default([]) }}"
       loop:
-        - "{{ _nexus_repos_maven_proxy }}"
-        - "{{ _nexus_repos_maven_hosted }}"
-        - "{{ _nexus_repos_maven_group }}"
-        - "{{ _nexus_repos_docker_proxy }}"
-        - "{{ _nexus_repos_docker_hosted }}"
-        - "{{ _nexus_repos_docker_group }}"
-        - "{{ _nexus_repos_pypi_proxy }}"
-        - "{{ _nexus_repos_pypi_hosted }}"
-        - "{{ _nexus_repos_pypi_group }}"
-        - "{{ _nexus_repos_raw_proxy }}"
-        - "{{ _nexus_repos_raw_hosted }}"
-        - "{{ _nexus_repos_raw_group }}"
-        - "{{ _nexus_repos_rubygems_proxy }}"
-        - "{{ _nexus_repos_rubygems_hosted }}"
-        - "{{ _nexus_repos_rubygems_group }}"
-        - "{{ _nexus_repos_bower_proxy }}"
-        - "{{ _nexus_repos_bower_hosted }}"
-        - "{{ _nexus_repos_bower_group }}"
-        - "{{ _nexus_repos_npm_proxy }}"
-        - "{{ _nexus_repos_npm_hosted }}"
-        - "{{ _nexus_repos_npm_group }}"
-        - "{{ _nexus_repos_nuget_proxy }}"
-        - "{{ _nexus_repos_nuget_hosted }}"
-        - "{{ _nexus_repos_nuget_group }}"
-        - "{{ _nexus_repos_gitlfs_hosted }}"
-        - "{{ _nexus_repos_yum_proxy }}"
-        - "{{ _nexus_repos_yum_hosted }}"
-        - "{{ _nexus_repos_yum_group }}"
-        - "{{ _nexus_repos_apt_proxy }}"
-        - "{{ _nexus_repos_apt_hosted }}"
-        - "{{ _nexus_repos_helm_proxy }}"
-        - "{{ _nexus_repos_helm_hosted }}"
-        - "{{ _nexus_repos_r_proxy }}"
-        - "{{ _nexus_repos_r_hosted }}"
-        - "{{ _nexus_repos_r_group }}"
-        - "{{ _nexus_repos_p2_proxy }}"
-        - "{{ _nexus_repos_conda_proxy }}"
-        - "{{ _nexus_repos_go_proxy }}"
-        - "{{ _nexus_repos_go_group }}"
-        - "{{ _nexus_repos_conan_proxy }}"
-        - "{{ _nexus_repos_cocoapods_proxy }}"
+        - "{{ _nexus_repos_maven_proxy | d([]) }}"
+        - "{{ _nexus_repos_maven_hosted | d([]) }}"
+        - "{{ _nexus_repos_maven_group | d([]) }}"
+        - "{{ _nexus_repos_docker_proxy | d([]) }}"
+        - "{{ _nexus_repos_docker_hosted | d([]) }}"
+        - "{{ _nexus_repos_docker_group | d([]) }}"
+        - "{{ _nexus_repos_pypi_proxy | d([]) }}"
+        - "{{ _nexus_repos_pypi_hosted | d([]) }}"
+        - "{{ _nexus_repos_pypi_group | d([]) }}"
+        - "{{ _nexus_repos_raw_proxy | d([]) }}"
+        - "{{ _nexus_repos_raw_hosted | d([]) }}"
+        - "{{ _nexus_repos_raw_group | d([]) }}"
+        - "{{ _nexus_repos_rubygems_proxy | d([]) }}"
+        - "{{ _nexus_repos_rubygems_hosted | d([]) }}"
+        - "{{ _nexus_repos_rubygems_group | d([]) }}"
+        - "{{ _nexus_repos_bower_proxy | d([]) }}"
+        - "{{ _nexus_repos_bower_hosted | d([]) }}"
+        - "{{ _nexus_repos_bower_group | d([]) }}"
+        - "{{ _nexus_repos_npm_proxy | d([]) }}"
+        - "{{ _nexus_repos_npm_hosted | d([]) }}"
+        - "{{ _nexus_repos_npm_group | d([]) }}"
+        - "{{ _nexus_repos_nuget_proxy | d([]) }}"
+        - "{{ _nexus_repos_nuget_hosted | d([]) }}"
+        - "{{ _nexus_repos_nuget_group | d([]) }}"
+        - "{{ _nexus_repos_gitlfs_hosted | d([]) }}"
+        - "{{ _nexus_repos_yum_proxy | d([]) }}"
+        - "{{ _nexus_repos_yum_hosted | d([]) }}"
+        - "{{ _nexus_repos_yum_group | d([]) }}"
+        - "{{ _nexus_repos_apt_proxy | d([]) }}"
+        - "{{ _nexus_repos_apt_hosted | d([]) }}"
+        - "{{ _nexus_repos_helm_proxy | d([]) }}"
+        - "{{ _nexus_repos_helm_hosted | d([]) }}"
+        - "{{ _nexus_repos_r_proxy | d([]) }}"
+        - "{{ _nexus_repos_r_hosted | d([]) }}"
+        - "{{ _nexus_repos_r_group | d([]) }}"
+        - "{{ _nexus_repos_p2_proxy | d([]) }}"
+        - "{{ _nexus_repos_conda_proxy | d([]) }}"
+        - "{{ _nexus_repos_go_proxy | d([]) }}"
+        - "{{ _nexus_repos_go_group | d([]) }}"
+        - "{{ _nexus_repos_conan_proxy | d([]) }}"
+        - "{{ _nexus_repos_cocoapods_proxy | d([]) }}"
       when: nexus_use_api_for_provisioning | default(false) | bool
 
     - name: Create/check privileges
