Create a Role named nexus3-repository-templates

--- a/molecule/default-converge.yml
+++ b/molecule/default-converge.yml
@@ -2,13 +2,12 @@
 - name: Converge
   hosts: nexus
   roles:
+    - role: nexus3-repository-templates
     - role: nexus3-pro
   vars_files:
     - ssl-{{ ansible_os_family }}.yml
     - nexus_common_test_vars.yml
     - nexus_ldap_test_vars.yml
-    - teams.yml
-    - repo-defaults.yml
     - .nexus-downloads/hosted-result.yml
     - .nexus-downloads/proxies-result.yml
 
