APT proxy requires flat to have a default
can not be omitted

--- a/tasks/process_repos_list.yml
+++ b/tasks/process_repos_list.yml
@@ -1516,7 +1516,7 @@
               'routingRule': combined_repo.routing_rule | default(omit),
               'apt': {
                 'distribution': combined_repo.distribution | default(omit),
-                'flat': combined_repo.flat | default(omit)
+                'flat': combined_repo.flat | default(false)
               }
             } -%}
             {%- if use_api -%}
