--- a/tasks/migrate_database.yml
+++ b/tasks/migrate_database.yml
@@ -73,9 +73,11 @@
   set_fact:
     nexus_database_migration_done: true
   tags: nexus-migrate
-  when: nexus_migrate_database | default(false) | bool
+  when: nexus_migrate_database | default(false) | bool and nexus_database_migration_done is not defined
 
 - name: Enable Postgres as datastore
   ansible.builtin.include_tasks: enable_postgres.yml
   tags: nexus-migrate
-  when: nexus_migrate_database | default(false) | bool
+  when:
+    - nexus_migrate_database | default(false) | bool
+    - nexus_database_migration_done | default(false) | bool
