--- a/tasks/nexus_install.yml
+++ b/tasks/nexus_install.yml
@@ -464,9 +464,8 @@
 - name: Run all notified handlers now
   ansible.builtin.meta: flush_handlers
 
-- name: Enable Postgres
+- name: Config Postgres
   ansible.builtin.include_tasks: enable_postgres.yml
-  when: nexus_use_postgres | default(false) | bool
   tags: nexus-postgres
 
 - name: Enable nexus systemd service and make sure it is started
